Comitand alterações no tcc e vídeo de simulação do primeiro problema:
-Metodologia, Aborgagem e Modelagem e Resultados Alterados.

--- a/01-elementos-pre-textuais/lista-simbolos.tex
+++ b/01-elementos-pre-textuais/lista-simbolos.tex
@@ -8,6 +8,7 @@
 	\item[$v$] Velocidade linear
 	\item[$\omega$] Velocidade angular
 	\item[($x_{a},y_{a}$)] Coordenadas do alvo no plano cartesiano
+	\item[$v_{d}$] Velocidade linear desejada
 	\item[$\omega_{d}$] Velocidade angular desejada
 	\item[($x_{r},y_{r}$)] Coordenadas do robô no plano cartesiano
 	\item[($x_{d},y_{d}$)] Coordenadas desejadas do robô no plano cartesiano
