--- a/02-elementos-textuais/introducao.tex
+++ b/02-elementos-textuais/introducao.tex
@@ -28,10 +28,14 @@ Outra questão importante, que inclusive é o foco do tema deste trabalho, é a 
 
 Este trabalho tem como objetivo o estudo de estratégias de controle de formação de uma frota de robôs e seu comportamento em relação à sua estrutura e ao problema, ao se deparar com falhas de um ou mais robôs, bem como a implementação deste sistema multiagente em uma plataforma experimental.%de baixo custo, visando, talvez, a melhor exploração do tema em um meio acadêmico. Outro objetivo é verificar como essa frota se comporta em relação a sua estrutura e ao problema, ao se deparar com falhas de um ou mais agentes.
 
+\section{Definição do Problema}
+\label{sec:defProb}
+Visando cumprir esse objetivo, definiu-se dois problemas. O primeiro e mais simples, consiste na coordenação de uma frota de robôs para que a mesma se alinhe paralelamente e sigam em linha reta, como em problemas de varreduras de área em paralelo. E o segundo, consiste em um controle de uma frota de \emph{N} robôs, para que a mesma localize um dado alvo no espaço e o circunde a uma distância \emph{R} e em um período \emph{T}, que se reajustará conforme o tamanho da frota.  
+
 \section{Infraestrutura Necessária}
 \label{sec:infra}
 
 %importante colocar aqui o motivo de se utilizar o LEGO: disponível no laboratório
 %Antes correção Anolan: Para a realização deste trabalho pretende-se utilizar dois ou mais kits da plataforma da LEGO: Lego Mindstorms. Que consiste em um NXT microcomputador de 32 bits, três motores, alguns sensores e peças de lego para montar a estrutura do robô. Além disto também será utilizado  o computador com alguns softwares, entre eles o MATLAB.
 
-Para a realização deste trabalho foram utilizados quatro kits da plataforma da \emph{LEGO\textregistered}: \emph{Lego Mindstorms\textregistered}, disponível do DECOM (Departamento de Computação do Centro Federal Tecnológico de Minas Gerais). Cada kit consiste em um microcomputador NXT de 32 bits, três motores, alguns sensores e peças de lego para montagem da estrutura do robô. Além disto, também será utilizado  um computador pessoal, com a seguinte configuração: processador \emph{intel core i7}, 8GB de memória \emph{RAM}, 1GB de mémória dedicada e 14", com o \emph{software MATLAB\textregistered} e a \emph{IDE Bricx Command Center} \cite{sorceforge2001} que é uma plataforma de desenvolvimento para robôs \emph{Lego Mindstorms\textregistered} que permite utilizar a linguagem \emph{NXC (Not eXactly C)} para programar os robôs.
+Para a realização deste trabalho foram utilizados três kits da plataforma da \emph{LEGO\textregistered}: \emph{Lego Mindstorms\textregistered}, disponível do DECOM (Departamento de Computação do Centro Federal Tecnológico de Minas Gerais). Cada kit consiste em um microcomputador NXT de 32 bits, três motores, alguns sensores e peças de lego para montagem da estrutura do robô. Além disto, também será utilizado  um computador pessoal, com a seguinte configuração: processador \emph{intel core i7}, 8GB de memória \emph{RAM}, 1GB de mémória dedicada e 14", com o \emph{software MATLAB\textregistered} e a \emph{IDE Bricx Command Center} \cite{sorceforge2001} que é uma plataforma de desenvolvimento para robôs \emph{Lego Mindstorms\textregistered} que permite utilizar a linguagem \emph{NXC (Not eXactly C)} para programar os robôs.
