--- a/main.tex
+++ b/main.tex
@@ -36,11 +36,10 @@
 %\usepackage{color, colortbl}                       % Comandos de cores
 %\usepackage{listings}                              % Importação de códigos fonte
 %\usepackage[bottom]{footmisc}                      % Mantém as notas de rodapé sempre na mesma posição
-%\usepackage{subfig}                                % Posicionamento de figuras
+\usepackage{subfig}                                % Posicionamento de figuras
 %\usepackage{scalefnt}                              % Permite redimensionar tamanho da fonte
 %\usepackage{lscape}                                % Permite páginas em modo "paisagem"
 %\usepackage{picinpar}                              % Dispor imagens em parágrafos
-
 \usepackage[table,xcdraw]{xcolor}                   %Adição minha devido à tabela
 \usepackage{gensymb}                                %Adição minha mat
 \usepackage{tikz}                                   %Adição minha mat   
@@ -102,8 +101,9 @@
     \include{./02-elementos-textuais/trab-relacionados}     % Trabalhos relacionados
     \include{./02-elementos-textuais/fund-teorica}          % Fundamentação teórica
     \include{./02-elementos-textuais/metodologia}           % Metodologia
-    \include{./02-elementos-textuais/desenhoemodelo}		%Desenho e Modelo do Sistema   
-    \include{./02-elementos-textuais/resultados}            % Resultados
+    \include{./02-elementos-textuais/desenhoemodelo}		%Desenho e Modelo do Sistema
+    \include{./02-elementos-textuais/simulacoes}            % Simulações
+    %\include{./02-elementos-textuais/resultados}            % Resultados
     \include{./02-elementos-textuais/conclusao}             % Conclusão
 
     % Elementos pós textuais
